# fairsharer_datascience

./: .gitignore  pyproject.toml  pyprojects.toml
.github/workflows/: ci.yml
fairsharer/: __init__.py  fair_sharer.py
tests/: test_fair_sharer.py
