[project]
name = "fairsharer"
version = "0.1.0"
description = "Fair Sharer Algorithmus für die DAISY Vorlesung"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

# Projekt-Konfiguration für fairsharer
# DAISY Portfolio Übung - Wintersemester 2025/26